# pm

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile
.claude/agents/: code-planner-writer.md
backend/: ai.py  crud.py  database.py  main.py  models.py  pyproject.toml  pytest_out.txt
backend/tests/: conftest.py  test_ai_chat.py  test_crud.py
docs/: PLAN.md  PLAN_CLAUDE.md  SCHEMA.md
frontend/: AGENTS.md  app.vue  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: app.vue
frontend/assets/css/: main.css
frontend/components/: AIChatSidebar.vue  KanbanBoard.vue  KanbanCard.vue  KanbanColumn.vue
frontend/composables/: useBoard.ts
frontend/middleware/: auth.global.ts
frontend/pages/: index.vue  login.vue
frontend/tests/e2e/: kanban.spec.ts
frontend/tests/unit/: useBoard.test.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
